<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/table_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txtTituloF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_span="2"
            android:gravity="center"
            android:padding="12dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txtUsuario"
            android:textSize="16sp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etUsuario"
            android:hint="@string/hUsuario"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="8dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/txtCorreo"
            android:textSize="16sp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etCorreo"
            android:hint="@string/hCorreo"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="8dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/txtPass"
            android:textSize="16sp"
            android:padding="8dp" />

        <EditText
            android:id="@+id/etClave"
            android:hint="@string/hPass"
            android:minHeight="48dp"
            android:padding="8dp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnGuardar"
            android:text="@string/btnGuardar"
            android:layout_span="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />
    </TableRow>
</TableLayout>