<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_titulo"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp">
        <Button
            android:id="@+id/btnFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnFrg"/>

        <Button
            android:id="@+id/btnTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnTable"/>

        <Button
            android:id="@+id/btnRelative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnR"/>

        <Button
            android:id="@+id/btnConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnC"/>

        <Button
            android:id="@+id/btnGrid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGri"/>
    </LinearLayout>


</LinearLayout>