<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:columnCount="2"
    android:rowCount="3">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtMenu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        android:layout_columnSpan="2" />

    <Button
        android:id="@+id/btnUsuarios"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/btnU"
        android:layout_columnWeight="1"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnProductos"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/btnP"
        android:layout_columnWeight="1"
        android:layout_margin="8dp" />
    <Button
        android:id="@+id/btnReportes"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/btnRe"
        android:layout_columnWeight="1"
        android:layout_margin="8dp" />

    <Button
        android:id="@+id/btnConfiguracion"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/btnConf"
        android:layout_columnWeight="1"
        android:layout_margin="8dp" />

</GridLayout>