<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ImageView
    android:id="@+id/imgLogo"
    android:layout_width="64dp"
    android:layout_height="64dp"
    android:src="@drawable/ic_logo"
    android:contentDescription="@string/txtLogo"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tvUniversidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUniversidad"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_alignTop="@id/imgLogo"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/tvCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCarrera"
        android:textSize="16sp"
        android:layout_toEndOf="@id/imgLogo"
        android:layout_below="@id/tvUniversidad"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp" />


    <Button
        android:id="@+id/btnContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnGuardarR"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>